chore: verify header

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                                                 <p
                                                     class="sidebar__profile-email line-clamp-1 line-number"
                                                 >
-                                                    lengoaingu@gmail.com.vn.xyz
+                                                    ngunl@gmail.com
                                                 </p>
                                             </div>
                                         </a>
@@ -464,7 +464,7 @@
                                 </section>
                             </aside>
                         </div>
-
+                        <!-- Header brand logo shopee -->
                         <a href="#" class="header-brand hide-tablet">
                             <svg viewBox="0 0 192 65" class="header-brand__icon">
                                 <g fill-rule="evenodd">
@@ -476,6 +476,7 @@
                         </a>
 
                         <input hidden type="checkbox" id="input-search-mobile" />
+                        <!-- Header search -->
                         <form class="header-search">
                             <div class="header-search__form-group">
                                 <div class="header-search__form-control">
@@ -557,7 +558,7 @@
                         </form>
 
                         <div class="row">
-                            <!-- Search menu -->
+                            <!-- Search menu icon on mobile -->
                             <div class="mobile-search">
                                 <label for="input-search-mobile" class="mobile-search__btn">
                                     <i class="bx bx-search"></i>
