feat: banner ui

--- a/index.html
+++ b/index.html
@@ -708,7 +708,46 @@
                 </div>
             </header>
             <!-- ====================== Main ====================== -->
-            <main id="main">Main component</main>
+            <main id="main">
+                <!-- Banner -->
+                <div class="banner">
+                    <div class="grid wide">
+                        <div class="banner__row">
+                            <figure class="banner__thumb banner__thumb--main">
+                                <a href="#!" class="banner__link">
+                                    <img
+                                        src="./assets/img/banner-1.jpeg"
+                                        alt=""
+                                        class="banner__img"
+                                    />
+                                </a>
+                                <button class="banner__control-btn banner__control-btn--left">
+                                    <i class="bx bx-chevron-left"></i>
+                                </button>
+                                <button class="banner__control-btn banner__control-btn--right">
+                                    <i class="bx bx-chevron-right"></i>
+                                </button>
+                            </figure>
+                            <figure class="banner__thumb banner__thumb--small hide-mobile">
+                                <a href="#!" class="banner__link">
+                                    <img
+                                        src="./assets/img/banner-2.jpeg"
+                                        alt=""
+                                        class="banner__img"
+                                    />
+                                </a>
+                                <a href="#!" class="banner__link">
+                                    <img
+                                        src="./assets/img/banner-3.png"
+                                        alt=""
+                                        class="banner__img"
+                                    />
+                                </a>
+                            </figure>
+                        </div>
+                    </div>
+                </div>
+            </main>
             <!-- ====================== Footer ====================== -->
             <footer id="footer">Footer component</footer>
         </div>
