--- a/index.html
+++ b/index.html
@@ -747,6 +747,126 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- Home product -->
+                <div class="home-product">
+                    <div class="grid wide">
+                        <div class="row">
+                            <div class="col l-2">
+                                <!-- Category -->
+                                <aside class="home-category">
+                                    <header class="home-category__header">
+                                        <div class="home-category__heading">
+                                            <span class="home-category__heading-icon">
+                                                <i class="bx bx-list-ul"></i>
+                                            </span>
+                                            <h2 class="home-category__heading-text">Category</h2>
+                                        </div>
+                                    </header>
+                                    <div class="home-category__body">
+                                        <div class="home-category__list">
+                                            <a
+                                                href="#!"
+                                                class="home-category__item home-category__item--active"
+                                            >
+                                                <span class="home-category__item-icon">
+                                                    <i class="bx bxs-right-arrow"></i>
+                                                </span>
+                                                <h3
+                                                    class="home-category__item-text line-clamp-1 line-number"
+                                                >
+                                                    All Products
+                                                </h3>
+                                            </a>
+                                            <a href="#!" class="home-category__item">
+                                                <span class="home-category__item-icon">
+                                                    <i class="bx bxs-right-arrow"></i>
+                                                </span>
+                                                <h3
+                                                    class="home-category__item-text line-clamp-1 line-number"
+                                                >
+                                                    What's New
+                                                </h3>
+                                            </a>
+                                            <a href="#!" class="home-category__item">
+                                                <span class="home-category__item-icon">
+                                                    <i class="bx bxs-right-arrow"></i>
+                                                </span>
+                                                <h3
+                                                    class="home-category__item-text line-clamp-1 line-number"
+                                                >
+                                                    Hot Products
+                                                </h3>
+                                            </a>
+                                            <a href="#!" class="home-category__item">
+                                                <span class="home-category__item-icon">
+                                                    <i class="bx bxs-right-arrow"></i>
+                                                </span>
+                                                <h3
+                                                    class="home-category__item-text line-clamp-1 line-number"
+                                                >
+                                                    Data Storage
+                                                </h3>
+                                            </a>
+                                            <a href="#!" class="home-category__item">
+                                                <span class="home-category__item-icon">
+                                                    <i class="bx bxs-right-arrow"></i>
+                                                </span>
+                                                <h3
+                                                    class="home-category__item-text line-clamp-1 line-number"
+                                                >
+                                                    Data Transmission
+                                                </h3>
+                                            </a>
+                                            <a href="#!" class="home-category__item">
+                                                <span class="home-category__item-icon">
+                                                    <i class="bx bxs-right-arrow"></i>
+                                                </span>
+                                                <h3
+                                                    class="home-category__item-text line-clamp-1 line-number"
+                                                >
+                                                    Power Delivery
+                                                </h3>
+                                            </a>
+                                            <a href="#!" class="home-category__item">
+                                                <span class="home-category__item-icon">
+                                                    <i class="bx bxs-right-arrow"></i>
+                                                </span>
+                                                <h3
+                                                    class="home-category__item-text line-clamp-1 line-number"
+                                                >
+                                                    Accessories
+                                                </h3>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </aside>
+                            </div>
+                            <div class="col l-10">
+                                <div class="home-filter">Filter</div>
+                                <div class="home-product__list">
+                                    <div class="row sm-gutter">
+                                        <div class="col l-2-4">
+                                            <article class="product-item">Product item</article>
+                                        </div>
+                                        <div class="col l-2-4">
+                                            <article class="product-item">Product item</article>
+                                        </div>
+                                        <div class="col l-2-4">
+                                            <article class="product-item">Product item</article>
+                                        </div>
+                                        <div class="col l-2-4">
+                                            <article class="product-item">Product item</article>
+                                        </div>
+                                        <div class="col l-2-4">
+                                            <article class="product-item">Product item</article>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </main>
             <!-- ====================== Footer ====================== -->
             <footer id="footer">Footer component</footer>
