--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
                                         </a>
                                     </div>
                                 </div>
-                                <button type="submit" class="btn header-search__btn">
+                                <button type="submit" class="btn primary header-search__btn">
                                     <i class="bx bx-search"></i>
                                 </button>
                             </div>
@@ -681,7 +681,10 @@
                                                 <p class="header-cart__footer-more">
                                                     2 More Products in Cart
                                                 </p>
-                                                <a href="#!" class="btn header-cart__footer-btn">
+                                                <a
+                                                    href="#!"
+                                                    class="btn primary header-cart__footer-btn"
+                                                >
                                                     View My Shopping Cart
                                                 </a>
                                             </footer>
@@ -843,7 +846,51 @@
                                 </aside>
                             </div>
                             <div class="col l-10">
-                                <div class="home-filter">Filter</div>
+                                <!-- Filter product -->
+                                <div class="home-filter">
+                                    <div class="row-center home-filter__row">
+                                        <!-- Sort -->
+                                        <div class="row-center home-filter__sort">
+                                            <span class="home-filter__sort-label">Sort by</span>
+                                            <button class="btn primary">Popular</button>
+                                            <button class="btn">Latest</button>
+                                            <button class="btn">Top Sales</button>
+                                            <button class="btn home-filter__sort-btn">
+                                                Price
+                                                <i
+                                                    class="bx bx-chevron-down home-filter__sort-icon"
+                                                ></i>
+                                                <div class="home-filter__dropdown">
+                                                    <a href="#!" class="home-filter__dropdown-item">
+                                                        Price: Low to high
+                                                    </a>
+                                                    <a href="#!" class="home-filter__dropdown-item">
+                                                        Price: High to Low
+                                                    </a>
+                                                </div>
+                                            </button>
+                                        </div>
+
+                                        <!-- Pagination -->
+                                        <div class="row-center home-filter__pagination">
+                                            <div class="row-center home-filter__pagination-label">
+                                                <span class="home-filter__pagination-curr">1</span>
+                                                / 2
+                                            </div>
+                                            <div class="row-center home-filter__pagings">
+                                                <button
+                                                    class="home-filter__paging-btn home-filter__paging-btn--disabled"
+                                                >
+                                                    <i class="bx bx-chevron-left"></i>
+                                                </button>
+                                                <button class="home-filter__paging-btn">
+                                                    <i class="bx bx-chevron-right"></i>
+                                                </button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- Product list -->
                                 <div class="home-product__list">
                                     <div class="row sm-gutter">
                                         <div class="col l-2-4">
