add: dots banner

--- a/index.html
+++ b/index.html
@@ -730,6 +730,11 @@
                                 <button class="banner__control-btn banner__control-btn--right">
                                     <i class="bx bx-chevron-right"></i>
                                 </button>
+                                <div class="row-center banner__dots">
+                                    <span class="banner__dot banner__dot--active"></span>
+                                    <span class="banner__dot"></span>
+                                    <span class="banner__dot"></span>
+                                </div>
                             </figure>
                             <figure class="banner__thumb banner__thumb--small hide-mobile">
                                 <a href="#!" class="banner__link">
