feat: home product pagination

--- a/index.html
+++ b/index.html
@@ -1715,6 +1715,43 @@
                                         </div>
                                     </div>
                                 </div>
+                                <!-- Paginations -->
+                                <div class="home-product__pagination">
+                                    <div class="row-center home-paging">
+                                        <a href="#!" class="row-center home-paging__icon">
+                                            <i class="bx bx-chevron-left"></i>
+                                        </a>
+                                        <div class="row-center home-paging__numbers">
+                                            <a
+                                                href="#!"
+                                                class="row-center home-paging__number home-paging__number--active"
+                                                >1</a
+                                            >
+                                            <a href="#!" class="row-center home-paging__number">
+                                                2
+                                            </a>
+                                            <a href="#!" class="row-center home-paging__number">
+                                                3
+                                            </a>
+                                            <a href="#!" class="row-center home-paging__number">
+                                                4
+                                            </a>
+                                            <a href="#!" class="row-center home-paging__number">
+                                                5
+                                            </a>
+                                            <a
+                                                href="#!"
+                                                class="row-center home-paging__number home-paging__more"
+                                            >
+                                                ...
+                                            </a>
+                                        </div>
+
+                                        <a href="#!" class="row-center home-paging__icon">
+                                            <i class="bx bx-chevron-right"></i>
+                                        </a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
