--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <link rel="stylesheet" href="./assets/css/responsive.css" />
     </head>
     <body>
-        <div id="root" style="height: 4000px">
+        <div id="root">
             <!-- ====================== Header ====================== -->
             <header id="header">
                 <div class="grid wide">
@@ -1758,7 +1758,173 @@
                 </div>
             </main>
             <!-- ====================== Footer ====================== -->
-            <footer id="footer">Footer component</footer>
+            <footer id="footer">
+                <div class="grid wide">
+                    <div class="row">
+                        <!-- Col 1 -->
+                        <div class="col l-2-4 m-4 c-6">
+                            <section class="footer-section">
+                                <h3 class="footer-section__heading">CUSTOMER SERVICE</h3>
+                                <ul class="footer-section__list">
+                                    <li class="footer-item">
+                                        <a href="#!" class="footer-item__link">Help center</a>
+                                    </li>
+                                    <li class="footer-item">
+                                        <a href="#!" class="footer-item__link">Shopee Blog</a>
+                                    </li>
+                                    <li class="footer-item">
+                                        <a href="#!" class="footer-item__link">Shopee Mall</a>
+                                    </li>
+                                    <li class="footer-item">
+                                        <a href="#!" class="footer-item__link">How To Buy</a>
+                                    </li>
+                                    <li class="footer-item">
+                                        <a href="#!" class="footer-item__link">Contact Us</a>
+                                    </li>
+                                </ul>
+                            </section>
+                        </div>
+                        <!-- Col 2 -->
+                        <div class="col l-2-4 m-4 c-6">
+                            <section class="footer-section">
+                                <h3 class="footer-section__heading">ABOUT SHOPEE</h3>
+                                <ul class="footer-section__list">
+                                    <li class="footer-item">
+                                        <a href="#!" class="footer-item__link">About Us</a>
+                                    </li>
+                                    <li class="footer-item">
+                                        <a href="#!" class="footer-item__link">Shopee Careers</a>
+                                    </li>
+                                    <li class="footer-item">
+                                        <a href="#!" class="footer-item__link">Shopee Policies</a>
+                                    </li>
+                                    <li class="footer-item">
+                                        <a href="#!" class="footer-item__link">Privacy Policy</a>
+                                    </li>
+                                    <li class="footer-item">
+                                        <a href="#!" class="footer-item__link">Flash Deals</a>
+                                    </li>
+                                </ul>
+                            </section>
+                        </div>
+                        <!-- Col 3 -->
+                        <div class="col l-2-4 m-4 c-6">
+                            <section class="footer-section">
+                                <h3 class="footer-section__heading">PAYMENT</h3>
+                                <div class="footer-section__images">
+                                    <figure class="footer-section__media">
+                                        <img
+                                            src="./assets/img/footer-card-1.png"
+                                            alt="Visa"
+                                            class="footer-section__image"
+                                        />
+                                    </figure>
+                                    <figure class="footer-section__media">
+                                        <img
+                                            src="./assets/img/footer-card-2.png"
+                                            alt="Master"
+                                            class="footer-section__image"
+                                        />
+                                    </figure>
+                                    <figure class="footer-section__media">
+                                        <img
+                                            src="./assets/img/footer-card-3.png"
+                                            alt="JCB"
+                                            class="footer-section__image"
+                                        />
+                                    </figure>
+                                    <figure class="footer-section__media">
+                                        <img
+                                            src="./assets/img/footer-card-4.png"
+                                            alt="American Express"
+                                            class="footer-section__image"
+                                        />
+                                    </figure>
+                                    <figure class="footer-section__media">
+                                        <img
+                                            src="./assets/img/footer-card-5.png"
+                                            alt="COD"
+                                            class="footer-section__image"
+                                        />
+                                    </figure>
+                                    <figure class="footer-section__media">
+                                        <img
+                                            src="./assets/img/footer-card-6.png"
+                                            alt="installment"
+                                            class="footer-section__image"
+                                        />
+                                    </figure>
+                                </div>
+                            </section>
+                        </div>
+                        <!-- Col 4 -->
+                        <div class="col l-2-4 m-4 c-6">
+                            <section class="footer-section">
+                                <h3 class="footer-section__heading">FOLLOW US</h3>
+                                <ul class="footer-section__list">
+                                    <li class="footer-item">
+                                        <a href="#!" class="footer-item__link">
+                                            <i class="bx bxl-facebook-circle footer-item__icon"></i>
+                                            Facebook
+                                        </a>
+                                    </li>
+                                    <li class="footer-item">
+                                        <a href="#!" class="footer-item__link">
+                                            <i class="bx bxl-instagram-alt footer-item__icon"></i>
+                                            Instagram
+                                        </a>
+                                    </li>
+                                    <li class="footer-item">
+                                        <a href="#!" class="footer-item__link">
+                                            <i class="footer-item__icon bx bxl-linkedin"></i>
+                                            LinkedIn
+                                        </a>
+                                    </li>
+                                </ul>
+                            </section>
+                        </div>
+                        <!-- Col 5 -->
+                        <div class="col l-2-4 m-8 c-12">
+                            <section class="footer-section">
+                                <h3 class="footer-section__heading">SHOPEE APP DOWNLOAD</h3>
+                                <div class="row-center footer-app">
+                                    <a href="#!" class="footer-app__media">
+                                        <img
+                                            src="./assets/img/qr-code.png"
+                                            alt="Download app by qr code"
+                                            class="footer-app__qr-code"
+                                        />
+                                    </a>
+                                    <div class="footer-app__list">
+                                        <a href="#!" class="footer-app__media">
+                                            <img
+                                                src="./assets/img/app-store.png"
+                                                alt="Shoppe on app store"
+                                                class="footer-app__logo"
+                                            />
+                                        </a>
+                                        <a href="#!" class="footer-app__media">
+                                            <img
+                                                src="./assets/img/google-play.png"
+                                                alt="Shoppe on google play"
+                                                class="footer-app__logo"
+                                            />
+                                        </a>
+                                        <a href="#!" class="footer-app__media">
+                                            <img
+                                                src="./assets/img/app-gallery.png"
+                                                alt="Shoppe on app gallery"
+                                                class="footer-app__logo"
+                                            />
+                                        </a>
+                                    </div>
+                                </div>
+                            </section>
+                        </div>
+                    </div>
+                    <div class="footer-copyright">© 2023 Shopee. All Rights Reserved.</div>
+                </div>
+            </footer>
         </div>
     </body>
 </html>
